--- a/final/Readme
+++ b/final/Readme
@@ -1,14 +1,29 @@
 Here's a List of both Activities and Code_Challenges:
 
-Activities    |    Status    |
-             
-Activity  1:        done
-Activity  2:        done
-Activity  3:        done
-Activity  4:        done
-Activity  5:        done
-Activity  6:        done
-Activity  7:        done
-Activity  8:        done
-Activity  9:        done
-Activity 10:     incomplete
+Activities    |     Status    |
+              |               |
+Activity  1:  |      done     |
+Activity  2:  |      done     |
+Activity  3:  |      done     |
+Activity  4:  |      done     |
+Activity  5:  |      done     |
+Activity  6:  |      done     |
+Activity  7:  |      done     |
+Activity  8:  |      done     |
+Activity  9:  |      done     |
+Activity 10:  |      done     |
+Activity 11:  |      done     |
+Activity 12:  |      done     |
+Activity 13:  |      done     |
+Activity 14:  |      done     |
+Activity 15:  |      done     |
+Activity 16:  |      done     |
+Activity 17:  |      done     |
+Activity 18:  |      done     |
+Activity 19:  |      done     |
+Activity 20:  |      done     |
+Activity 21:  |      done     |
+Activity 22:  |      done     |
+Activity 23:  |      done     |
+Activity 24:  |      done     |
+Activity 25:  |      done     |
